--- a/styling.css
+++ b/styling.css
@@ -1,5 +1,6 @@
 body {
     background-color: #8b4513;
+    font-family: Verdana;
 }
 
 #MainCookie {
@@ -7,14 +8,64 @@ body {
 
 }
 
-.centered {
-    margin: auto;
-}
-
 p {
     color: white;
 }
 
 #CookieArea {
+    position: absolute;
+    background-color: #6C350F;
+    top: 5%;
+    height: 75%;
+    width: 250px;
+    border-radius: 50px;
+}
+
+#CookieArea p {
     
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#Shop {
+    position: absolute;
+    top: 5%;
+    left: 58%;
+    width: 40%;
+    height: 70%;
+    background-color: #6b6b6b;
+    border-radius: 50px;
+    border-width: 2px;
+}
+
+.ShopContent {
+    padding: 15px;
+    align-items: right;
+}
+
+.ShopButtons {
+    margin-top: 20px;
+    margin-left: 17px;
+    width: 70%;
+    height: 40px;
+    background-color: #6C350F;
+
+    color: White;
+    font-weight: bold;
+    font-family: Verdana;
+
+    border: none;
+    border-radius: 5px;
+}
+
+.inline {
+    display: inline;
+    color: white;
+    font-weight: bold;
+}
+
+.FlexItems {
+    display: flex;
+    flex-wrap: nowrap;
 }
