--- a/styling.css
+++ b/styling.css
@@ -5,7 +5,10 @@ body {
 
 #MainCookie {
     margin: 10% 0 0 10%;
+}
 
+#SecondCookie {
+    margin: 10% 0 0 10%;
 }
 
 p {
@@ -21,8 +24,23 @@ p {
     border-radius: 50px;
 }
 
+#CookieArea2 {
+    position: absolute;
+    background-color: #000000;
+    top: 5%;
+    left: 300px;
+    height: 75%;
+    width: 250px;
+    border-radius: 50px;
+}
+
 #CookieArea p {
-    
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#CookieArea2 p {
     text-align: center;
     font-size: 20px;
     font-weight: bold;
@@ -57,6 +75,36 @@ p {
 
     border: none;
     border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+}
+
+.NextCookieBtn {
+    background-color: #A25016;
+}
+
+.ShopCookie2Btn {
+    margin-top: 20px;
+    margin-left: 17px;
+    width: 70%;
+    height: 40px;
+    background-color: #a52a2a;
+    border-color: chocolate;
+
+    color: White;
+    font-weight: bold;
+    font-family: Verdana;
+
+    border: none;
+    border-radius: 5px;
+    transition: all 0.2s ease-in-out;
+}
+
+.ShopButtons:hover {
+    background-color: #904714;
+}
+
+.ShopCookie2Btn:hover {
+    background-color: #CD3C3C;
 }
 
 .inline {
